# OpenKawa

./: .gitignore  Dockerfile.dev  README  docker-compose.yml  pySimIkawa.py  pyproject.toml
.tmp_melos_probe/: pubspec.yaml
IkawaCmd/: protc_pb2.py
docker/: entrypoint.sh
docs/: app-ideas.md  flutter-architecture.md  flutter-implementation-checklist.md
mobile/: README.md  melos.yaml  pubspec.yaml
mobile/.dart_tool/: package_config.json  package_graph.json
mobile/apps/ikawa_mobile_app/: README.md  pubspec.yaml
mobile/apps/ikawa_mobile_app/android/app/: build.gradle.kts
mobile/apps/ikawa_mobile_app/assets/theme/: open_kawa_palette.css
mobile/apps/ikawa_mobile_app/ios/Runner/: Info.plist
mobile/apps/ikawa_mobile_app/ios/Runner.xcodeproj/: project.pbxproj
mobile/apps/ikawa_mobile_app/ios/Runner/Base.lproj/: LaunchScreen.storyboard
mobile/apps/ikawa_mobile_app/lib/: main.dart
mobile/apps/ikawa_mobile_app/lib/src/: app.dart  app_assets.dart  app_config.dart  app_shell.dart  home_screen.dart  live_roast_telemetry.dart  profile_detail_screen.dart  providers.dart  roast_features.dart  roast_profile_list_screen.dart  run_history_screen.dart  simulated_roaster_transport.dart
mobile/apps/ikawa_mobile_app/lib/src/theme/: open_kawa_colors.dart  (+1 more)
mobile/apps/ikawa_mobile_app/test/: live_roast_telemetry_test.dart  widget_test.dart
mobile/proto/: README.md
src/ikawa_roaster_emulator/: __init__.py  app.py
src/ikawa_roaster_emulator/bluetooth/: __init__.py  controller.py
src/ikawa_roaster_emulator/emulator/: __init__.py  helpers.py  state.py
(+7 files in other folders)
